@@ -1,3 +1,10 @@
+2007-01-07  Thomas Wood  <thos@gnome.org>
+
+	* gnome-wp-item.c: (gnome_wp_item_get_thumbnail):
+	* gnome-wp-xml.c: (gnome_wp_xml_load_list):
+
+	Apply patch from bug 335220 (mem leaks in gnome-wp-item)
+
 2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
 
 	Fixes #336286
